Update crops3d notebook
Added warning message about computation duration.

--- a/crops3d_fiftyone.ipynb
+++ b/crops3d_fiftyone.ipynb
@@ -293,6 +293,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "# WARNING! This might take a while\n",
+        "\n",
         "# Compute embeddings for all samples\n",
         "print(\"Computing geometric features for each point cloud...\")\n",
         "print(\"This may take a while for 1,180 samples...\\n\")\n",
